:heavy_plus_sign: Install python packages with docker apis

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,31 @@
 --- # tasks/main.yml
 
+- name: install epel release
+  yum: name=epel-release state=present
+  become: true
+
+- name: install pip
+  yum: name=python-pip state=present
+  become: true
+
+- name: install pip3
+  yum: name=python3-pip state=present
+  become: true
+
+- name: update pip3 to latest
+  pip: name={{ item }} state=latest executable=pip3
+  become: true
+  with_items:
+  - setuptools
+  - pip
+
+- name: install docker python bindings
+  pip: name={{ item }} state=present executable=pip2
+  become: true
+  with_items:
+  - docker-py==1.10.6
+  - docker-compose==1.9.0
+
 - name: ensure docker daemon is started
   service: name=docker state=started
   become: true
